🐙🛥 Checkpoint ./views/dashboard.hbs:46254006/711

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -5,25 +5,7 @@
     <h2 class="ui header">
       {{title}}
     </h2>
-    <table class="ui table">
-      <thead>
-        <tr>
-          <th>Song</th>
-          <th>Artist</th>
-        </tr>
-      </thead>
-      <tbody>
-        {{#each songs}}
-          <tr>
-            <td>
-              {{title}}
-            </td>
-            <td>
-              {{artist}}
-            </td>
-          </tr>
-        {{/each}}
-      </tbody>
-    </table>
+    <p>Total Duration: {{duration}}</p>
+    <a href="#" 
   </section>
 {{/each}}
