--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,11 +1,13 @@
 {{> menu id="dashboard"}}
 
 {{#each playlists}}
+
   <section class="ui segment">
     <h2 class="ui header">
       {{title}}
     </h2>
     <p>Total Duration: {{duration}}</p>
-    <a href="#" 
+    <a href="/playlist/{{id}}">View</a>
   </section>
+
 {{/each}}
