⏱🎒 Checkpoint ./views/partials/listplaylists.hbs:46254006/529 ./views/dashboard.hbs:46254006/323

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,13 +1,5 @@
 {{> menu id="dashboard"}}
 
-{{#each playlists}}
-
-  <section class="ui segment">
-    <h2 class="ui header">
-      {{title}}
-    </h2>
-    <p>Total Duration: {{duration}}</p>
-    <a href="/playlist/{{id}}">View</a>
-  </section>
-
-{{/each}}
+<section class="ui segment">
+  {{> listplaylists}}
+</section>
