👩‍👩‍👦🛬 Checkpoint ./routes.js:46254006/71 ./controllers/dashboard.js:46254006/343 ./views/partials/listplaylists.hbs:46254006/94 ./models/playlist-store.js:46254006/174 ./views/partials/listsongs.hbs:46254006/233

--- a/views/partials/listplaylists.hbs
+++ b/views/partials/listplaylists.hbs
@@ -1,6 +1,6 @@
 {{#each playlists}}
   <section>
-    <h2 class="ui header">
+    <h2 class="ui header" style="margin-top: 1.5rem;">
       {{title}}    
     </h2>
     <p>Total Duration: {{duration}}</p>
