--- a/views/partials/listsongs.hbs
+++ b/views/partials/listsongs.hbs
@@ -15,7 +15,9 @@
           {{artist}}
         </td>
         <td>
-          <a href="/playlist/{{../playlist.id}}/deletesong/{{id}}" class="ui tiny red button">Delete Song</a>
+          <a href="/playlist/{{../playlist.id}}/deletesong/{{id}}" class="ui icon button">
+            <i class="icon trash"></i>
+          </a>
         </td>
       </tr>
     {{/each}}
