--- a/views/playlist.hbs
+++ b/views/playlist.hbs
@@ -4,5 +4,7 @@
   <h2 class="ui header">
     {{playlist.title}}
   </h2>
+  <!--  Deriving from partials  -->
   {{> listsongs}}
+  {{> addsong}}
 </section>
