Add duration and add song duration

--- a/views/partials/addsong.hbs
+++ b/views/partials/addsong.hbs
@@ -10,6 +10,11 @@
       <label>Artist</label>
       <input placeholder="Artist" type="text" name="artist">
     </div>
+    <!--  Duration Input -->
+    <div class="field">
+      <label>Duration</label>
+      <input placeholder="00" type="number" name="duration">
+    </div>
   </div>
   <button class="ui blue submit button">
     Add Song
