--- a/views/partials/listsongs.hbs
+++ b/views/partials/listsongs.hbs
@@ -3,6 +3,8 @@
     <tr>
       <th>Song</th>
       <th>Artist</th>
+      <th>Duration</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -13,6 +15,9 @@
         </td>
         <td>
           {{artist}}
+        </td>
+        <td>
+          {{duration}}
         </td>
         <td>
           <a href="/playlist/{{../playlist.id}}/deletesong/{{id}}" class="ui icon button">
