Add accounts controller, views for user signup, user store module, cookie mechanism

--- a/views/partials/listplaylists.hbs
+++ b/views/partials/listplaylists.hbs
@@ -1,5 +1,5 @@
 {{#each playlists}}
-  <section>
+  <section class="ui stacked segment">
     <h2 class="ui header" style="margin-top: 1.5rem;">
       {{title}}    
     </h2>
