Add utils for playlist analytics, fix bug for duration field not displaying in view

--- a/views/playlist.hbs
+++ b/views/playlist.hbs
@@ -1,8 +1,10 @@
+{{> menu}}
+
 <section class="ui center aligned middle aligned segment">
   <h2 class="ui header">
-    {{theList.title}}
+    {{playlist.title}}
   </h2>
-  <h4> Shortest song: {{shortestSong.title}}</h4>
+  <h4> Total Duration: {{playlistSummary.duration}}; Shortest song: {{playlistSummary.shortestSong.title}}</h4>
   {{> listsongs}}
   {{> addsong}}
 </section>
